# mobile_farm

./: .qmlls.ini  CMakeLists.txt  DeviceScanDialog.qml  Main.qml  adbrunner.cpp  adbrunner.h  devicescanner.cpp  devicescanner.h  main.cpp  resources.qrc
.cache/clangd/index/: adbrunner.h.E3C6E86EF6D535FD.idx  device.h.15DD1A75EFC6BFEE.idx  devicemanager.h.AAFF67D84EB993C7.idx  devicescanner.h.BF5BC84A62AC15A1.idx  scrcpyservice.h.AA1E1E72C8815731.idx  scrcpysession.h.92C9CFD9C2A9783F.idx
adb/: adbrunner.cpp  adbrunner.h
device/: device.h  devicemanager.h  devicescanner.cpp  devicescanner.h
qml/: Main.qml
scrcpy/: scrcpyservice.cpp  scrcpysession.cpp  scrcpysession.h
src/adb/: adbrunner.cpp  adbrunner.h
src/config/: appconfig.h
src/device/: device.cpp  device.h  devicemanager.cpp  devicemanager.h  devicescanner.h
src/qml/: DeviceList.qml  DeviceScanDialog.qml  Main.qml
src/scrcpy/: scrcpyparams.h  scrcpyservice.h  scrcpysession.cpp  scrcpysession.h
